--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 </head>
 
 <body>
-    <p id="modelmsg"></p>
-    <p id="facemsg" style="visibility: hidden;font-size: 20px; font-weight: 800; margin: 0;">* Face Detected</p>
-    <p id="handMsg" style="visibility: hidden;font-size: 20px; font-weight: 800; margin: 0">* Hand Detected</p>
+    <p id="modelmsg" style="margin: auto 20%;"></p>
+    <p id="facemsg" style="visibility: hidden;font-size: 20px; font-weight: 800; margin: auto 20%;">* Face Detected</p>
+    <p id="handMsg" style="visibility: hidden;font-size: 20px; font-weight: 800; margin: auto 20%;">* Hand Detected</p>
 
     <video id="video" autoplay></video>
     <!-- <button id="captureButton">Capture Image</button> -->
