--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 
     <!-- Load the handtrackjs model. -->
-    <script src="https://cdn.jsdelivr.net/npm/handtrackjs/dist/handtrack.min.js"> </script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/handtrackjs/dist/handtrack.min.js"> </script> -->
+    <script src="https://bkr.axiomprotect.com:6653/AxiomFiles/handtrack.min.js"> </script>
 
 
     <!-- <script src="./HandTrack.js"></script> -->
@@ -70,7 +71,7 @@
         let hand_model = null;
         const modelParams = {
             flipHorizontal: true,   // flip e.g for video  
-            maxNumBoxes: 20,        // maximum number of boxes to detect
+            maxNumBoxes: 5,        // maximum number of boxes to detect
             iouThreshold: 0.5,      // ioU threshold for non-max suppression
             scoreThreshold: 0.6,    // confidence threshold for predictions.
         }
@@ -126,27 +127,6 @@
             }
         }
 
-
-        // currentStream?.then(async stream => {
-
-        //     video.srcObject = stream;
-        //     currentStream = stream;
-
-        //     video.srcObject = stream;
-        //     video.autoplay = true;
-        //     // Wait for the video to be loaded
-        //     video.onloadedmetadata = () => {
-        //         // Set up a loop to continuously capture frames from the video stream                    
-        //         console.log("Detection started");
-        //         setInterval(() => {
-        //             detectObjectsInFrame(video);
-        //         }, 800); // Adjust the interval as needed
-        //     };
-
-        // })
-        //     .catch(err => {
-        //         console.error('Error accessing the webcam:', err);
-        //     });
 
 
 
